# lasR

./: .Rbuildignore  .covrignore  .gitattributes  .gitignore  404.html  CLAUDE.md  DESCRIPTION  LICENCE.note  LICENSE-text.html  Makefile  NAMESPACE  NEWS.md  PYTHON_API_IMPLEMENTATION.md  README.md  _pkgdown.yml  authors.html  authors.md  configure  configure.ac  index.html  index.md  lasR.Rproj  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  pylasr.yaml  rchk.yaml  test-coverage.yaml
R/: RcppExports.R  algorithm.R  deprecated.R  doc.R  execute.R  filters.R  internals.R  json.R  openmp.R  pipeline.R  pipeline_tools.R  pipelines.R  processor.R  stages.R  tempfile.R  ui_tools.R  xptr.R  zzz.R
articles/: baba.html  baba.md  benchmarks.html  benchmarks.md  index.html  index.md  lasR-lidR-mapping.html  lasR1.html  lasR2.html  lasR3.html  lasR4.html  lasR5.html  multithreading.html  multithreading.md  pipeline.html  r-stages.html  r-stages.md  remote.html  remote.md  tutorial.html  tutorial.md  why.html  why.md
benchmarks/: benchmark.R  benchmark.sh  track_memory.sh
inst/: .gitignore  COPYRIGHTS  benchmark-multithread.R  benchmark.R  lasr.R
inst/extdata/: .gitignore  Example.bbox  Example.las  Example.lax  Example.pcd  Example.rds  Megaplot.las  Megaplot.lax  MixedConifer.las  MixedConifer.lax  Topography.las  Topography.lax  example.copc.laz  extra_byte.las  las14_pdrf6.laz  nocrs.las  nou11.bbox  nou11.pcd  pcd_ascii.bbox  pcd_ascii.pcd  pcd_binary.bbox  test.pcd
man/: add_attribute.Rd  add_extrabytes.Rd  add_rgb.Rd  boundaries.Rd  callback.Rd  chm.Rd  classify_isolated_points.Rd  classify_with_csf.Rd  classify_with_ipf.Rd  classify_with_ivf.Rd  classify_with_pdt.Rd  classify_with_ptd.Rd  classify_with_sor.Rd  delete_points.Rd  deprecated.Rd  dsm.Rd  dtm.Rd  edit_attribute.Rd  exec.Rd  filter_with_grid.Rd  filters.Rd  focal.Rd  geometry_features.Rd  hag.Rd  hulls.Rd  info.Rd  install_cmd_tools.Rd  lasR-package.Rd  load_matrix.Rd  load_raster.Rd  local_maximum.Rd  metric_engine.Rd  multithreading.Rd  ncores.Rd  normalize.Rd  old_exec.Rd  pit_fill.Rd  plot.lasrcloud.Rd  print.lasrcloud.Rd  processor.Rd  (+21 more)
man-roxygen/: param-attribute.R  param-filter.R  param-ofile.R  return-pointcloud.R  return-raster.R  return-vector.R
news/: index.html  index.md
python/: CMakeLists.txt  MANIFEST.in  README.md  advanced_pipeline.json  bindings.cpp  cleanup.sh  debug_install.py  example.py  example_usage.py  export_python.cpp  fix_module.py  install_and_run.sh  lasr_cli.py  lasr_stages.h  pyproject.toml  setup.py  setup_env.sh  stages.py  tutorial.md  utils.py  vendor_files.txt
python/examples/: README.md  basic_usage.py  complete_example.py  create_pipelines.py  lasr_cli.py
python/tests/: __init__.py  run_tests.py  test_basic_import.py  test_functions.py  test_integration.py  test_pipeline.py  test_remote.py  test_stage_functions.py  test_stage_pipeline.py  test_stage_results.py  test_utils.py
reference/: add_attribute.html  add_attribute.md  add_extrabytes.html  add_rgb.html  add_rgb.md  boundaries.html  callback.html  callback.md  chm.html  classify_isolated_points.html  classify_with_csf.html  classify_with_csf.md  classify_with_ipf.html  classify_with_ipf.md  classify_with_ivf.html  classify_with_ivf.md  classify_with_ptd.html  classify_with_ptd.md  classify_with_sor.html  classify_with_sor.md  delete_ground.html  delete_points.html  delete_points.md  deprecated.html  deprecated.md  drop_z_between.html  dsm.html  dsm.md  dtm.html  dtm.md  edit_attribute.html  edit_attribute.md  exec.html  exec.md  filter_with_grid.html  filter_with_grid.md  filters.html  filters.md  focal.html  focal.md  (+83 more)
src/: Makevars.in  Makevars.ucrt  Makevars.win  Rbinding.cpp  RcppExports.cpp  addattribute.cpp  addattribute.h  aggregate.cpp  aggregate.h  boundaries.cpp  boundaries.h  callback.cpp  callback.h  export.cpp  filter.cpp  filter.h  loadraster.h  localmaximum.cpp  localmaximum.h  main.cpp  noiseivf.h  nothing.h  openmp.cpp  pitfill.cpp  pitfill.h  plot.cpp  process.cpp  rasterize.cpp  rasterize.h  readdataframe.cpp  readdataframe.h  readlas.cpp  readlas.h  regiongrowing.cpp  regiongrowing.h  sampling.cpp  sampling.h  summary.cpp  summary.h  transformwith.cpp  (+13 more)
src/LASR/: Chunk.h  GDALdataset.cpp  GDALdataset.h  Grid.cpp  Grid.h  GridPartition.cpp  GridPartition.h  Grouper.cpp  Grouper.h  LAS.cpp  LAS.h  LAScatalog.cpp  LAScatalog.h  Metrics.cpp  Metrics.h  Progress.cpp  Progress.h  Progress.hpp  R2cpp.cpp  R2cpp.h  Raster.cpp  Raster.h  Rcompatibility.h  Shape.cpp  Shape.h  Stage.cpp  Vector.cpp  Vector.h  error.cpp  lasralgorithm.cpp  lasralgorithm.h  openmp.h  parser.cpp  pipeline.cpp  pipeline.h
src/LASRapi/: PipelineAPI_Impl.cpp  StageAPI_Impl.cpp  api.cpp  api.h  execute.cpp  tools.cpp
src/LASRcore/: Accessors.h  AttributeMapping.h  CRS.cpp  CRS.h  Catalog.cpp  Catalog.h  Chunk.h  DrawflowParser.cpp  DrawflowParser.h  Engine.cpp  Engine.h  FastGridPartition2D.h  FileCollection.cpp  FileCollection.h  FilterParser.cpp  FilterParser.h  GDALdataset.cpp  GDALdataset.h  Grid.cpp  Grid.h  GridPartition.cpp  GridPartition.h  Grouper.cpp  Header.cpp  Header.h  Interval.h  LAS.cpp  LAS.h  LAScatalog.cpp  LAScatalog.h  LASlibextension.hpp  LASlibinterface.cpp  LASlibinterface.h  LODtree.cpp  LODtree.h  Metrics.cpp  Metrics.h  NA.h  PointCloud.cpp  PointCloud.h  (+33 more)
src/LASRreaders/: EPTio.cpp  EPTio.h  Fileio.h  Header.cpp  Header.h  LASio.cpp  LASio.h  PCDio.cpp  PCDio.h  PointSchema.cpp  PointSchema.h
src/LASRstages/: addattribute.cpp  addattribute.h  addrgb.h  aggregate.cpp  aggregate.h  boundaries.cpp  boundaries.h  breakif.cpp  breakif.h  callback.cpp  callback.h  csf.cpp  csf.h  edit.cpp  edit.h  filter.cpp  filter.h  focal.cpp  focal.h  info.cpp  info.h  ipf.cpp  ipf.h  ivf.cpp  ivf.h  loadmatrix.cpp  loadmatrix.h  loadraster.cpp  loadraster.h  localmaximum.cpp  (+53 more)
tests/: testthat.R
vignettes/: baba.Rmd  benchmarks.Rmd  lasR1.Rmd  lasR2.Rmd  lasR3.Rmd  lasR4.Rmd  lasR5.Rmd  multithreading.Rmd  pipeline.Rmd  r-stages.Rmd  remote.Rmd  tutorial.Rmd  why.Rmd
(+204 files in other folders)
